<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="5dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bikeStationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bike_station_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/bikeStationDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bikeStationName"
                android:text="@string/bike_station_distance"
                android:textStyle="normal"
                android:textColor="#5A5A5A"
                android:textSize="14sp"/>

            <LinearLayout
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/bikeStationDistance"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_pedal_bike_24"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_lock_open_24"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/available_bike"
                    android:gravity="center"
                    android:textStyle="normal"
                    android:textColor="#5A5A5A"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/available_place"
                    android:gravity="center"
                    android:textStyle="normal"
                    android:textColor="#5A5A5A"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/textQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textTitle"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bikeQty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_07"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="#2B4E14"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/freeQty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_19"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="#292828"
                    android:textSize="24sp"/>

            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:ignore="RedundantNamespace" />


</LinearLayout>